--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                             <h3>Web-based Hotel Reservation System</h3>
                             <p class="item-subtitle">
                                 Project
-                                <a href="https://github.com/johnpewpew/Web-based-Hotel-Reservation-System2.0"
+                                <a href="https://github.com/JP-ctte/HOTEL-RESERVATION-WEB-BASED-"
                                     target="_blank" rel="noopener" class="github-link" aria-label="GitHub Repository">
                                     <i class="fab fa-github"></i>
                                 </a>
@@ -442,5 +442,6 @@
     <script src="javascript/animation effect/contact.js"></script>
     <script src="javascript/animation effect/squares-background.js"></script> <!-- Optional if using external JS -->
 </body>
+
 
 </html>
