--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="social-icons">
                     <a href="https://www.facebook.com/john.p.caraig.3" target="_blank" aria-label="Facebook"><i
                             class="fab fa-facebook-f"></i></a>
-                    <a href="https://www.instagram.com/jp.ctte_/" target="_blank" aria-label="Instagram"><i
+                    <a href="https://www.instagram.com/jp.ct_te/" target="_blank" aria-label="Instagram"><i
                             class="fab fa-instagram"></i></a>
                     <a href="mailto:johnpaulcaraig325@gmail.com" target="_blank" aria-label="Google"><i
                             class="fab fa-google"></i></a>
@@ -405,7 +405,7 @@
                 <div class="social-icons1 animate-on-scroll">
                     <a href="https://www.facebook.com/john.p.caraig.3" class="social-link" target="_blank"><i
                             class="fab fa-facebook-f"></i></a>
-                    <a href="https://www.instagram.com/jp.ctte_/" target="_blank" class="social-link"><i
+                    <a href="https://www.instagram.com/jp.ct_te/" target="_blank" class="social-link"><i
                             class="fab fa-instagram"></i></a>
                     <a href="https://github.com/JP-ctte" class="social-link" target="_blank"><i
                             class="fab fa-github"></i></a>
@@ -445,3 +445,4 @@
 
 
 </html>
+
